[metadata]
name = aiidalab-timer
version = 1.0.0
author = Edan Bainglass
author_email = edan.bainglass@psi.ch
description = An app to display a timer in its aiidalab-home container
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edan-bainglass/aiidalab-timer
license = MIT
license_file = LICENSE
project_urls =
    Logo = https://raw.githubusercontent.com/edan-bainglass/aiidalab-timer/main/assets/images/logo.png
    Documentation = https://github.com/edan-bainglass/aiidalab-timer/#readme
    Bug Tracker = https://github.com/edan-bainglass/aiidalab-timer/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[aiidalab]
title = AiiDAlab Timer
description = An app to display a countdown timer that displays the time remaining until the running container is culled.

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiidalab>=24.09.0
    aiidalab-widgets-base~=2.4.0
